feat: initial design?

--- a/style.ini
+++ b/style.ini
@@ -16,34 +16,12 @@
 
 [stylesheets]
 
-css/basic.css                         = screen
+css/normalize.css			= screen
+css/basic.css				= screen
 
-; load styles from the default 'dokuwiki' template
-; some of these have been renamed from *.css to *.less
-; but .css still loads the same file and is backwards compatible
-../dokuwiki/css/_imgdetail.css        = screen
-../dokuwiki/css/_media_popup.css      = screen
-../dokuwiki/css/_media_fullscreen.css = screen
-../dokuwiki/css/_fileuploader.css     = screen
-../dokuwiki/css/_tabs.css             = screen
-../dokuwiki/css/_links.css            = screen
-../dokuwiki/css/_toc.css              = screen
-../dokuwiki/css/_footnotes.css        = screen
-../dokuwiki/css/_search.less          = screen
-../dokuwiki/css/_recent.css           = screen
-../dokuwiki/css/_diff.css             = screen
-../dokuwiki/css/_edit.css             = screen
-../dokuwiki/css/_modal.css            = screen
-../dokuwiki/css/_forms.css            = screen
-../dokuwiki/css/_admin.less            = screen
-
-; load the rest of the styles
 css/structure.css                     = screen
 css/design.css                        = screen
 css/content.css                       = screen
-
-css/mobile.css                        = all
-css/print.css                         = print
 
 
 ; This section is used to configure some placeholder values used in
@@ -73,13 +51,16 @@ __border__         = "#ccc"                 ; @ini_border
 __highlight__      = "#ff9"                 ; @ini_highlight
 
 ; link color
-__link__            = "#00c"                ; @ini_link
+__link__            = "#4e5abb"                ; @ini_link
 
 ;--------------------------------------------------------------------------
 
-; widths
-__site_width__     = "100%"                 ; @ini_site_width
-__sidebar_width__  = "16em"                 ; @ini_sidebar_width
+; width
+__site_width__     = "80rem"                 ; @ini_site_width
 
 ; color of the web app (used by the core, not by the template)
 __theme_color__    = "#eee"                 ; @ini_theme_color
+
+; font
+__font_family__    = "sans-serif"           ; @ini_font_family
+
